Introducing unit tests for the AmendableWidgetImpl.